0/0.2/Trabajo-individual-final/DEMO/test-pod-correct.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-correct
  labels:
    app: demo
spec:
  containers:
    - name: nginx
      image: nginx
