0/0.2/Trabajo-individual-final/DEMO/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: enforce
  rules:
    - name: check-for-required-labels
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "All pods must have a 'app' label."
        pattern:
          metadata:
            labels:
              app: "?*"
